--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <link rel="stylesheet" href="css/style.css"/>
     </head>
     <body>
-        <script src="build.js"></script>
+        <script type="module" src="main.js"></script>
     </body>
 </html>
